<resources>
    <string name="app_name">RestoSearch</string>
    <string name="title_activity_restaurant_category">RestaurantCategoryActivity</string>

    <string name="search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorites">Favorites</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
        labore et dolore magna aliqua.
    </string>
    <string name="more">More</string>
    <string name="location">Location</string>
    <string name="phone_number">Phone number</string>
    <string name="cuisine">Cuisine</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_recommended">Recommended</string>
    <string name="info">Info</string>
    <string name="notifications">Notifications</string>
    <string name="send_feedback">Send feedback</string>
    <string name="no_more_restaurants">There\'re no more restaurants</string>
    <string name="dont_have_an_account">Don\'t have an account? Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="resto">Resto</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Agree and Create account</string>
    <string name="have_account">Have an account? Log in</string>
    <string name="terms_conditions">I have read and accept the Terms of Use</string>
    <string name="logout">Logout</string>
    <string name="birth_date">Birth Date</string>
    <string name="about">About</string>
    <string name="zomato_powered">API Powered by</string>
    <string name="zomato">Zomato</string>
    <string name="icon_freepik">Icon made by Freepik from www.flaticon.com</string>
    <string name="app_description">This app is part of a professional portfolio and
        has some pages with data dummy. There are not register of real users.</string>
    <string name="made_by">Made by Dumevi Cruces</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyDas1I1qR7rNy2HYH2QKoWl-OgBhEuMuNY
    </string>

    <string name="search_hint">Search restaurants</string>
    <string name="sorry_an_error_occurred">Sorry, an error occurred</string>
    <string name="empty_email">The item email cannot be empty</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="empty_password">The password cannot be empty</string>
    <string name="short_password">The password should have 4 characters at least</string>
    <string name="empty_fullname">The item fullname cannot be empty</string>
    <string name="same_password">The passwords are not the same</string>
    <string name="accept_terms_and_conditions">You have to accept the Terms and Conditions</string>
    <string name="login_canceled">Login canceled</string>
    <string name="error_trying_login_fb_account">Sorry, error trying login with your facebook account</string>

    <string name="facebook_app_id">393004571139940</string>
    <string name="fb_login_protocol_scheme">fb393004571139940</string>
</resources>
