<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_action_favorite"
            android:title="@string/action_favorites" />
        <item
            android:id="@+id/nav_recommended"
            android:icon="@drawable/ic_action_recommended"
            android:title="@string/action_recommended" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/action_settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_action_message"
            android:title="@string/about" />
    </group>
</menu>