<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryBackground"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/background_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="50dp"
                android:paddingRight="50dp">

                <ImageView
                    android:id="@+id/logo_restosearch"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_logo_restosearch" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/logo_text_resto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resto"
                        android:textSize="@dimen/medium_text" />

                    <TextView
                        android:id="@+id/logo_text_search"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search"
                        android:textSize="@dimen/medium_text" />

                </LinearLayout>

                <EditText
                    android:id="@+id/fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:inputType="text"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/medium_text" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/medium_text" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/medium_text" />

                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/medium_text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/bithdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:padding="4dp"
                        android:text="@string/birth_date"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/medium_text" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:background="@color/gray_dark" />

                </LinearLayout>


                <CheckBox
                    android:id="@+id/terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/terms_conditions"
                    android:textColor="@color/gray_dark_text_checkbox" />

                <TextView
                    android:id="@+id/signin_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/button"
                    android:clickable="true"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/register"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/medium_text" />

                <TextView
                    android:id="@+id/have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="20dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:padding="5dp"
                    android:text="@string/have_account" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>

