<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/app_bar"
                layout="@layout/app_bar_custom" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="220dp">

                        <android.support.v4.view.ViewPager
                            android:id="@+id/slide_header_pager"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/gray_transparent" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:orientation="vertical">

                            <LinearLayout
                                android:id="@+id/title_header"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="20dp"
                                android:gravity="center"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/logo_text_resto"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/resto"
                                    android:textColor="@color/gray_lighter"
                                    android:textSize="24sp" />

                                <TextView
                                    android:id="@+id/logo_text_search"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/search"
                                    android:textColor="@color/gray_lighter"
                                    android:textSize="24sp" />

                            </LinearLayout>
                            
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/lorem_ipsum"
                                android:textColor="@color/gray_light"
                                android:textSize="16sp" />

                        </LinearLayout>

                        <com.ogaclejapan.smarttablayout.SmartTabLayout
                            android:id="@+id/slide_header_pager_tab"
                            android:layout_width="wrap_content"
                            android:layout_height="26dp"
                            android:layout_alignParentBottom="true"
                            android:layout_centerInParent="true"
                            android:paddingBottom="10dp"
                            app:stl_clickable="false"
                            app:stl_customTabTextLayoutId="@layout/custom_tab_circle"
                            app:stl_dividerColor="@color/transparent"
                            app:stl_dividerThickness="0dp"
                            app:stl_indicatorColor="#fff"
                            app:stl_indicatorCornerRadius="4dp"
                            app:stl_indicatorGravity="center"
                            app:stl_indicatorInterpolation="linear"
                            app:stl_indicatorThickness="8dp"
                            app:stl_underlineColor="#000"
                            app:stl_underlineThickness="0dp" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/recycler_categories"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="15dp" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/button_more"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingBottom="10dp"
                                android:layout_marginBottom="10dp"
                                android:paddingTop="10dp"
                                android:paddingLeft="15dp"
                                android:paddingRight="15dp"
                                android:layout_marginRight="5dp"
                                android:layout_marginTop="5dp"
                                android:background="?attr/selectableItemBackground"
                                android:text="@string/more"
                                android:clickable="true"
                                android:layout_alignParentRight="true"
                                android:textAllCaps="true"
                                android:textColor="@color/colorPrimary"
                                android:textSize="14sp" />

                        </RelativeLayout>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/recycler_restaurants"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp" />

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </android.support.design.widget.CoordinatorLayout>

        <View
            android:id="@+id/overlay_view"
            android:layout_width="match_parent"
            android:background="@color/gray_transparent"
            android:visibility="visible"
            android:layout_height="match_parent"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_main"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/main_drawer" />

</android.support.v4.widget.DrawerLayout>
